Bug 141969 - Bold handling in docx table
Summary: Bold handling in docx table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.2.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Character
  Show dependency treegraph
 
Reported: 2021-04-29 09:37 UTC by rikard
Modified: 2025-02-26 11:04 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Bold inconsistencies (17.43 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-04-29 09:37 UTC, rikard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rikard 2021-04-29 09:37:55 UTC
Created attachment 171500 [details]
Bold inconsistencies

Word displays both tables the same way (name as bold, brewery as non bold, italic)
LibreOffice 7.0 displays one as non-bold, other as bold.
LibreOffice 7.1 displays both as bold.

Not sure if its related to ignoring the disabling of bold property <w:b w:val="0">.
Comment 1 Harshita Nag 2021-05-01 11:28:12 UTC
Hello rikard@ngs.hr,
    I can confirm this bug.
    This bug was earlier in 6.0.7.3 and then got rectified in 7.0 and came back in 
    the 7.1 version(I checked).

ADDITIONAL INFO:

Version: 6.0.7.3
Build ID: 1:6.0.7-0ubuntu0.18.04.10
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: en-IN (en_IN); Calc: group

and, 

Version: 7.1.1.2 / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 2 rikard 2021-05-01 11:44:05 UTC
Just to be clear. The behavior of 7.0 is also not correct.
If you open this attachment in 7.0 it will show name and brewery of the first table as non bold, while name and brewery of the second table as bold.

The expected behavior is that name is bold and brewery is non bold in both tables.
Comment 3 Timur 2022-09-08 11:28:52 UTC
In 6.4 it was OK (bibi), in 7.0 seem 3 changes (bibb, bibi, bbni) and in 7.1 all bold (bbbb) wrong as in 7.5+.
(b stands for bold, regardless if also italic, i for italic only, n for normal)

1st change bibi>bibb:
commit 2ab481b038b62b1ff576ac4d49d03c1798cd7f84
author	László Németh <nemeth@numbertext.org>	2020-01-08 
tdf#90069 DOCX: fix character style of new table rows

2nd change/fix bibb>bibi
commit abb9c7db8bcc06f907d39a7811711882161d5803	
author	László Németh <nemeth@numbertext.org>	Feb 07 2020 
tdf#130494: DOCX import: limit paragraph-level character property

So it needs more bibisects.
Comment 4 Timur 2022-09-08 11:51:21 UTC
3rd change bibi>bbni - real regression here: 
commit 4d5c0eaf3e0d3d3bcd9e691fffee19b75f3d6631	
author	László Németh <nemeth@numbertext.org>	Feb 17 2020 
tdf#118812 DOCX import: fix table style preference – part 2

4th change bbni>bbbb:
commit bf3124cdf61b40c94ba117a76f1b63dabdfd528e	[log]
author	László Németh <nemeth@numbertext.org>	Wed Aug 19 2020
tdf#135187 DOCX import: fix table style at character formatting


CC László. please see this.
Comment 5 Commit Notification 2023-07-04 18:10:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b036e563e699595fa7625888f11ab0c76f1abd66

tdf#141969: use paragraph autostyle to mimic Word's table style

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-07-05 05:18:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/cece082f1b94e448ea807d22a1d177c33635406c

tdf#141969: use paragraph autostyle to mimic Word's table style

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-07-05 06:15:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1db2c58efedb36703ae39f42dc21c6796b1fd675

tdf#141969: use paragraph autostyle to mimic Word's table style

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-07-06 12:42:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/732d0e89363abb009ff13a23957ab7257a378a11

Related: tdf#141969 Make sure to use SwAttrSet for paragraph autostyles

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-07-06 16:28:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9b267374c2a59bd53316a92139becb92ec5bac4e

Related: tdf#141969 Make sure to use SwAttrSet for paragraph autostyles

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-07-07 06:17:47 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/5613ed23387af37a367f2c72432085b43cb687a4

Related: tdf#141969 Make sure to use SwAttrSet for paragraph autostyles

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.